# ml

./: .gitignore  api_app.py  api_emo.py  api_fish.py  api_mistral.py  emot_classifer.ipynb  fish.py  mistral.ipynb  pyproject.toml  system_prompt.txt
save_fish/audio/reference_voice/: RU_Male_SpoungeBob.npy  motivational_orig.npy
