[project]
name = "emotion-classifer"
version = "0.1.0"
description = ""
authors = [
    {name = "TamaraKK",email = "tomkavins@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.5.1)",
    "transformers (>=4.48.0)",
    "torchaudio (>=2.5.1)",
    "joblib (>=1.4.2)",
    "ipykernel (>=6.29.5)",
    "faster-whisper (>=1.1.1)",
    
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
